Add other distro images

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 ### for ROS2 enviroments
 ROS_DOMAIN_ID=0
+ROS_LOCALHOST_ONLY=0
+ROS_AUTOMATIC_DISCOVERY_RANGE=SYSTEM_DEFAULT
 
 # ROS_AUTOMATIC_DISCOVERY_RANGE
     # Jazzy から ROS_DOMAIN_ID の大替となった環境変数。
@@ -7,4 +9,8 @@ ROS_DOMAIN_ID=0
         # LOCALHOST=同一マシン内のノードのみ探索
         # OFF=他ノードは探索しない
         # SYSTEM_DEFAULT=システムデフォルト設定に準拠
-ROS_AUTOMATIC_DISCOVERY_RANGE=SYSTEM_DEFAULT
+
+
+### for ROS1 (noetic) enviroments
+ROS_MASTER_URI=http://localhost:11311
+ROS_IP=localhost
