--- a/Dockerfile.foxy
+++ b/Dockerfile.foxy
@@ -15,6 +15,9 @@ ENV NVIDIA_DRIVER_CAPABILITIES=${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPA
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     locales software-properties-common tzdata \
+    x11-utils x11-apps xauth \
+    nano \
+    terminator \
     python3-pip &&\
     locale-gen ja_JP ja_JP.UTF-8 && update-locale LC_ALL=ja_JP.UTF-8 LANG=ja_JP.UTF-8 &&\
     add-apt-repository universe
@@ -35,9 +38,12 @@ RUN echo ". /opt/ros/foxy/setup.bash" >> /root/.bashrc
 RUN echo ". /colcon_ws/install/setup.bash" >> /root/.bashrc
 RUN echo "export PS1='\[\033[47;30m\]\$ROS_DISTRO\[\033[0m\]:\[\033[32m\]\u:\[\033[36m\]\w \[\033[37m\]\$ '" >> /root/.bashrc
 
-
+# create ws
 WORKDIR /colcon_ws
 RUN mkdir src && colcon build --symlink-install
 
+# terminator setting
+RUN mkdir -p /root/.config/terminator
+COPY assets/terminator.config /root/.config/terminator/config
 
 CMD ["/bin/bash"]
