--- a/Dockerfile.humble
+++ b/Dockerfile.humble
@@ -24,10 +24,11 @@ RUN apt-get update && \
 
 
 # ROS humble and dependencies install
+ARG REPO=ros-base
 RUN apt-get update && apt-get install -y curl &&\
     curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg &&\
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null &&\
-    apt-get update && apt-get install -y ros-humble-ros-base \
+    apt-get update && apt-get install -y ros-humble-${REPO} \
     ros-dev-tools &&\
     rosdep init &&\
     rosdep update &&\
