--- a/Dockerfile.noetic
+++ b/Dockerfile.noetic
@@ -24,10 +24,11 @@ RUN apt-get update && \
 
 
 # ROS noetic and dependencies install
+ARG REPO=ros-base
 RUN apt-get update && apt-get install -y curl &&\
     sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' &&\
     curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add - &&\
-    apt-get update && apt-get install -y ros-noetic-ros-base \
+    apt-get update && apt-get install -y ros-noetic-${REPO} \
     python3-rosdep python3-rosinstall python3-rosinstall-generator python3-wstool build-essential python3-catkin-tools &&\
     rosdep init &&\
     rosdep update &&\
